unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fferpcore__SlackChannelSetting__mdt.object-meta.xml
<CustomObject>
    <description>Contains configuration details for the Slack Channel component.</description>
    <label>Slack Channel Configuration</label>
    <pluralLabel>Slack Channel Configurations</pluralLabel>
</CustomObject>