unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__DestinationObjectType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DestinationObjectType__c</fullName>
    <description>The API name of the object that provides user details for the related object's Slack channels.</description>
    <inlineHelpText>The API name of the object that provides user details for the related object's Slack channels.</inlineHelpText>
    <label>User Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>