unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__RecordNamePath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RecordNamePath__c</fullName>
    <description>The path or API name for the field containing the record identifier that you want to display in the Record Name column of the Slack Channel component.</description>
    <inlineHelpText>The path or API name for the field containing the record identifier that you want to display in the Record Name column of the Slack Channel component.</inlineHelpText>
    <label>Record Name Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>