unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__RelationshipPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RelationshipPath__c</fullName>
    <description>The path or API name for the field connecting the object specified in the User Object field to the object specified in the Slack Channel Object field.</description>
    <inlineHelpText>The path or API name for the field connecting the object specified in the User Object field to the object specified in the Slack Channel Object field.</inlineHelpText>
    <label>Relationship Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>