unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__SourceObjectType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SourceObjectType__c</fullName>
    <description>The API name of the object on which to create Slack channels and manage channel members.</description>
    <inlineHelpText>The API name of the object on which to create Slack channels and manage channel members.</inlineHelpText>
    <label>Slack Channel Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>