unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__UserIdPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UserIdPath__c</fullName>
    <description>The path or API name for the field containing the Salesforce user ID.</description>
    <inlineHelpText>The path or API name for the field containing the Salesforce user ID.</inlineHelpText>
    <label>Salesforce User ID Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>