unpackaged/main/default/objects/fferpcore__SlackChannelSetting__mdt/fields/fferpcore__UserNamePath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UserNamePath__c</fullName>
    <description>The path or API name for the field containing the user identifier that you want to display in the User column of the Slack Channel component.</description>
    <inlineHelpText>The path or API name for the field containing the user identifier that you want to display in the User column of the Slack Channel component.</inlineHelpText>
    <label>User Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>